# vegan-bulletin

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  docker-entrypoint.sh  manage_site.py  pyproject.toml
bulletin/: admin.py  context_processors.py  models.py  urls.py  views.py
bulletin/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: base.html
templates/bulletin/: about.html  event_detail.html  event_list.html  home.html  news_detail.html  news_list.html  promotion_detail.html  promotion_list.html  resource_detail.html  resource_list.html  special_detail.html  special_list.html
